# berlin-opendata-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  claude_desktop_config.json  pyproject.toml  render.yaml
src/berlin_opendata_mcp/: __init__.py  api_client.py  server.py
tests/: test_integration.py
