[project]
name = "berlin-opendata-mcp"
version = "0.1.0"
description = "MCP Server for Berlin Open Data – 6 tools for CKAN catalog search, analysis, and exploration across 2500+ datasets"
readme = "README.md"
license = "MIT"
authors = [
    { name = "tim" }
]
requires-python = ">=3.11"
keywords = [
    "mcp", "open-data", "berlin", "ckan", "datenregister", "smart-city",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24",
    "pytest>=8.0",
    "ruff>=0.5.0",
    "build>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/tifa365/berlin-opendata-mcp"
"Open Data Berlin" = "https://daten.berlin.de"

[project.scripts]
berlin-opendata-mcp = "berlin_opendata_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/berlin_opendata_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
